--- a/Project/about me.html
+++ b/Project/about me.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-        
-    <head>
-        <title>About me</title>
-    </head>
 
-    <body>
+<head>
+    <title>About me</title>
+</head>
 
-    </body>
+<body>
+    <div class="title"></div>
+</body>
 
 </html>
