--- a/Project/portfolio.html
+++ b/Project/portfolio.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html>
-        
-    <head>
-        <title>Portfolio</title>
-    </head>
 
-    <body>
-        <h2>My name is Hrithik.</h2><BR>
+<head>
+    <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
-        <a href = "about me.html">About me</a><BR>
-        <a href="projects.html">My Projects</a>
+<body id="body">
+    <h2 id="heading">
+        Portfolio
+    </h2>
+    <BR>
 
-             
+    <div class="head">
+        <h3 id="head">My name is Hrithik Ram S.</h3>
+        <p>This is a portfolio created by me.
+            <BR> It shows all the projects that I have created and information about myself.
+            <h5>About Myself</h5>
+            <a target="_blank" href="about me.html">About me</a>
+            <BR>
+            <h5>View my projects</h5>
+            <a href="projects.html" target="_blank">My Projects</a>
+        </p>
+    </div>
 
-    </body>
+
+
+</body>
 
 </html>
