--- a/Project/about me.html
+++ b/Project/about me.html
@@ -3,10 +3,24 @@
 
 <head>
     <title>About me</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <div class="title"></div>
+    <a href="portfolio.html" target="_blank">
+        <p id="a">Home</p>
+    </a>
+    <h2 id="heading">About Myself</h2>
+    <div class="head">
+        <p>My name is Hrithik Ram S
+            <BR> I am 12 years old.
+            <BR>
+            <BR> I study in Shishya BEML Public School.
+            <BR>
+            <BR> I am in 8th grade.
+            <BR>
+        </p>
+    </div>
 </body>
 
 </html>
