--- a/Project/portfolio.html
+++ b/Project/portfolio.html
@@ -16,10 +16,15 @@
         <h3 id="head">My name is Hrithik Ram S.</h3>
         <p>This is a portfolio created by me.
             <BR> It shows all the projects that I have created and information about myself.
-            <h5>About Myself</h5>
+            <BR>
+            <BR> About Myself
+            <BR>
+            <BR>
             <a target="_blank" href="about me.html">About me</a>
             <BR>
-            <h5>View my projects</h5>
+            <BR> View my projects
+            <BR>
+            <BR>
             <a href="projects.html" target="_blank">My Projects</a>
         </p>
     </div>
