--- a/Project/projects.html
+++ b/Project/projects.html
@@ -7,25 +7,31 @@
 </head>
 
 <body>
-
+    <a href="portfolio.html" target="_blank">
+        <p id="a">Home</p>
+    </a>
 
     <h1 id="heading">My projects</h1>
     <div class="head">
-        <div class="game1">
+        <div class="game">
             <p>1. Soccer Game</p>
-            <a href="https://studio.code.org/projects/gamelab/uq0A66vMDIwbJXiL9uebJs2CJOal_vcEy5eGSVx0Rco/"><img src="Soccer game.png" width="200" height="200"></a>
+            <a href="https://studio.code.org/projects/gamelab/uq0A66vMDIwbJXiL9uebJs2CJOal_vcEy5eGSVx0Rco/"><img src="Soccer game.png" width="300" height="300"></a>
         </div>
-        <div class="game2">
+        <div class="game">
             <p>2.Trex Game</p>
-            <a href="https://editor.p5js.org/sudhakar7805/present/heVQx7CmN"><img src="Trex game.png" width="500" height="200"></a>
+            <a href="https://editor.p5js.org/sudhakar7805/present/heVQx7CmN"><img src="Trex game.png" width="300" height="300"></a>
         </div>
-        <div class="game3">
+        <div class="game">
             <p>3.Angry Birds</p>
-            <a href="https://hrithik2008.github.io/C33-ClassProject/"><img src="angry_birds.png" width="750" height="250"></a>
+            <a href="https://hrithik2008.github.io/C33-ClassProject/"><img src="angry_birds.png" width="300" height="300"></a>
         </div>
-        <div class="game4">
+        <div class="game">
             <p>4.Multiplayer car racing game</p>
-            <a href="https://hrithik2008.github.io/MultiplayerCarRacingGame"><img src="Car.png" width="750" height="250"></a>
+            <a href="https://hrithik2008.github.io/MultiplayerCarRacingGame"><img src="Car.png" width="300" height="300"></a>
+        </div>
+        <div class="game">
+            <p>5.Space Shooter</p>
+            <a href="https://studio.code.org/projects/gamelab/xQZl9rbpwSVde2d_UpLVDhK9Ff0C61BndJNoDDNSrTk"><img src="Space_shooter.png" width="300" height="300"></a>
         </div>
     </div>
 
